<resources>
    <string name="app_name">Score Keeper</string>
    <string name="cardinals">Cardinals</string>
    <string name="runs">Runs:</string>
    <string name="_0">0</string>
    <string name="add_a_run">Add a Run</string>
    <string name="outs">Outs:</string>
    <string name="add_an_out">Add an Out</string>
    <string name="team_b">Team B</string>
    <string name="reset">Reset</string>
    <string name="new_inning">New Inning</string>
</resources>
